* fix catalog thumbnails alignment on ereader * move process "file listing" file to dj-library * doujinshi/index - adjust bottom white space based on the new thumb size

--- a/app/assets/stylesheets/doujinshi.scss
+++ b/app/assets/stylesheets/doujinshi.scss
@@ -10,7 +10,7 @@ body[data-ctrl="doujinshi"] {
   }
   
   table.dj-details {
-    margin-bottom: 300px;
+    margin-bottom: 400px;
     
     tr {
       progress {
